@@ -23,6 +23,7 @@ enable_fast_exit yes
 disable_empty_gui off
 analog_redraw_skip_count 20
 splash_disable off
+hide_sst off
 sst_dynamic_filter on
 use_standard_clicking on
 use_toolbutton_interface on
